test/tests/compiler/18_structures/invalid_parse/var_decl_bad_tag_2.plx
type struc s (y: i32)

pub fn main(none) i32 {
    # can't parenthesize struct tag
    var: struc (s);

    return 0
}
